--- a/Codename_Puck/app/src/main/AndroidManifest.xml
+++ b/Codename_Puck/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -39,7 +40,7 @@
         <activity android:name=".cameraActivity"
             android:label="@string/app_name"
 
-            android:screenOrientation="portrait">
+            android:screenOrientation="userPortrait">
             <!-- configure this activity to use landscape orientation -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
